--- a/Durak/Durak/GameBoard.es.resx
+++ b/Durak/Durak/GameBoard.es.resx
@@ -145,4 +145,13 @@
   <data name="mainMenuButton.Text" xml:space="preserve">
     <value>Volver al menú principal</value>
   </data>
+  <data name="numberOfCardsLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1169, 205</value>
+  </data>
+  <data name="numberOfCardsLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 22</value>
+  </data>
+  <data name="numberOfCardsLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleCenter</value>
+  </data>
 </root>
