--- a/Durak/Durak/GameBoard.resx
+++ b/Durak/Durak/GameBoard.resx
@@ -1069,6 +1069,6 @@
     <value>True</value>
   </metadata>
   <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>es</value>
+    <value>en</value>
   </metadata>
 </root>
