--- a/Durak/Durak/GameBoard.resx
+++ b/Durak/Durak/GameBoard.resx
@@ -127,9 +127,6 @@
   <data name="card6.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
   </data>
-  <data name="&gt;&gt;card6.Type" xml:space="preserve">
-    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="&gt;&gt;extraBotCards.ZOrder" xml:space="preserve">
     <value>6</value>
   </data>
@@ -170,6 +167,9 @@
   <data name="cardAttack2.Location" type="System.Drawing.Point, System.Drawing">
     <value>559, 277</value>
   </data>
+  <data name="card3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>668, 568</value>
+  </data>
   <data name="&gt;&gt;numberOfCardsLabel.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
@@ -203,6 +203,9 @@
   <data name="card4.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
   </data>
+  <data name="extraBotCards.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 11.25pt</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="cardDefend2.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>Zoom</value>
@@ -234,11 +237,11 @@
   <data name="&gt;&gt;card5.ZOrder" xml:space="preserve">
     <value>23</value>
   </data>
+  <data name="cardDefend2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>559, 334</value>
+  </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>42</value>
-  </data>
-  <data name="&gt;&gt;botCard3.Name" xml:space="preserve">
-    <value>botCard3</value>
   </data>
   <data name="cardDefend1.TabIndex" type="System.Int32, mscorlib">
     <value>22</value>
@@ -270,11 +273,11 @@
   <data name="cardDefend6.TabIndex" type="System.Int32, mscorlib">
     <value>27</value>
   </data>
-  <data name="botCard2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>559, 13</value>
-  </data>
   <data name="&gt;&gt;botCard4.Parent" xml:space="preserve">
     <value>$this</value>
+  </data>
+  <data name="&gt;&gt;mainDeck.Name" xml:space="preserve">
+    <value>mainDeck</value>
   </data>
   <data name="cardDefend5.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -303,6 +306,9 @@
   <data name="&gt;&gt;mainMenuButton.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;extraBotCards.Name" xml:space="preserve">
+    <value>extraBotCards</value>
+  </data>
   <data name="historyTextBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>351, 718</value>
   </data>
@@ -311,9 +317,6 @@
   </data>
   <data name="&gt;&gt;cardAttack3.Type" xml:space="preserve">
     <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="cardAttack6.TabIndex" type="System.Int32, mscorlib">
-    <value>21</value>
   </data>
   <data name="&gt;&gt;historyTextBox.Name" xml:space="preserve">
     <value>historyTextBox</value>
@@ -423,8 +426,8 @@
   <data name="&gt;&gt;cardDefend1.Type" xml:space="preserve">
     <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;botCard6.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="numberOfCardsLabel.TabIndex" type="System.Int32, mscorlib">
+    <value>44</value>
   </data>
   <data name="&gt;&gt;botCard5.Name" xml:space="preserve">
     <value>botCard5</value>
@@ -456,8 +459,8 @@
   <data name="&gt;&gt;card4.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;cardDefend1.ZOrder" xml:space="preserve">
-    <value>20</value>
+  <data name="sortingComboBox.Items1" xml:space="preserve">
+    <value>Suit</value>
   </data>
   <data name="cardDefend2.TabIndex" type="System.Int32, mscorlib">
     <value>23</value>
@@ -486,8 +489,8 @@
   <data name="&gt;&gt;card1.Name" xml:space="preserve">
     <value>card1</value>
   </data>
-  <data name="&gt;&gt;extraBotCards.Name" xml:space="preserve">
-    <value>extraBotCards</value>
+  <data name="&gt;&gt;cardAttack1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="goBack.Location" type="System.Drawing.Point, System.Drawing">
     <value>369, 708</value>
@@ -576,17 +579,14 @@
   <data name="&gt;&gt;card1.ZOrder" xml:space="preserve">
     <value>27</value>
   </data>
-  <data name="&gt;&gt;cardAttack1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="&gt;&gt;endTurnButton.Name" xml:space="preserve">
     <value>endTurnButton</value>
   </data>
+  <data name="&gt;&gt;cardAttack1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
   <data name="card2.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 163</value>
-  </data>
-  <data name="sortingComboBox.Items1" xml:space="preserve">
-    <value>Suit</value>
   </data>
   <data name="&gt;&gt;nextCard.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -705,8 +705,8 @@
   <data name="cardAttack1.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>Zoom</value>
   </data>
-  <data name="extraBotCards.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 11.25pt</value>
+  <data name="&gt;&gt;botCard3.Name" xml:space="preserve">
+    <value>botCard3</value>
   </data>
   <data name="card1.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -786,11 +786,14 @@
   <data name="&gt;&gt;cardDefend2.Name" xml:space="preserve">
     <value>cardDefend2</value>
   </data>
-  <data name="&gt;&gt;cardDefend3.Name" xml:space="preserve">
-    <value>cardDefend3</value>
+  <data name="cardAttack6.TabIndex" type="System.Int32, mscorlib">
+    <value>21</value>
   </data>
   <data name="&gt;&gt;botCard1.Name" xml:space="preserve">
     <value>botCard1</value>
+  </data>
+  <data name="&gt;&gt;cardAttack2.Name" xml:space="preserve">
+    <value>cardAttack2</value>
   </data>
   <data name="&gt;&gt;card6.ZOrder" xml:space="preserve">
     <value>22</value>
@@ -855,8 +858,8 @@
   <data name="&gt;&gt;cardDefend4.Type" xml:space="preserve">
     <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;cardAttack1.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="botCard2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>559, 13</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -888,8 +891,8 @@
   <data name="cardDefend4.Location" type="System.Drawing.Point, System.Drawing">
     <value>777, 334</value>
   </data>
-  <data name="card3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>668, 568</value>
+  <data name="&gt;&gt;cardDefend3.Name" xml:space="preserve">
+    <value>cardDefend3</value>
   </data>
   <data name="&gt;&gt;cardAttack6.ZOrder" xml:space="preserve">
     <value>35</value>
@@ -963,20 +966,20 @@
   <data name="cardDefend1.Location" type="System.Drawing.Point, System.Drawing">
     <value>450, 334</value>
   </data>
-  <data name="cardDefend2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>559, 334</value>
+  <data name="&gt;&gt;cardDefend1.ZOrder" xml:space="preserve">
+    <value>20</value>
   </data>
   <data name="&gt;&gt;cardAttack4.Type" xml:space="preserve">
     <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;mainDeck.Name" xml:space="preserve">
-    <value>mainDeck</value>
+  <data name="&gt;&gt;botCard6.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="&gt;&gt;mainDeck.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;cardAttack2.Name" xml:space="preserve">
-    <value>cardAttack2</value>
+  <data name="&gt;&gt;card6.Type" xml:space="preserve">
+    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="nextCard.Size" type="System.Drawing.Size, System.Drawing">
     <value>75, 23</value>
@@ -1035,9 +1038,6 @@
   <data name="sortingComboBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>1123, 580</value>
   </data>
-  <data name="winLabel.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
   <data name="cardAttack3.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 163</value>
   </data>
@@ -1059,8 +1059,8 @@
   <data name="&gt;&gt;label1.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="numberOfCardsLabel.TabIndex" type="System.Int32, mscorlib">
-    <value>44</value>
+  <data name="winLabel.Enabled" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
   <data name="&gt;&gt;card4.Name" xml:space="preserve">
     <value>card4</value>
@@ -1069,6 +1069,6 @@
     <value>True</value>
   </metadata>
   <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>fr</value>
+    <value>en</value>
   </metadata>
 </root>
